ADD CentralCache frame & finish FetchFromCentralCache in ThreadCache

--- a/项目思路与细节.md
+++ b/项目思路与细节.md
@@ -113,13 +113,10 @@ public:
 
 ### 自由链表的下标
 
+&emsp;我们知道申请空间的字节数，现在要根据这个字节数算出应该去找哪个自由链表。然而由于不同的字节数范围，它们所采取的对齐数的值是不同的，因此我们要对不同范围的字节数进行判断，然后再计算它是哪个自由链表的。
 
-
-
-
-
-
-
+比如：14字节大小，它是属于8对齐数的，因此是``14/8=1``，是下标位1的自由链表。
+再比如：129字节大小，它是属于16对齐数的，但是由于前面的128字节是按照8对齐数进行对齐的，与16字节对齐的方式不同，因此我们不能直接的使用129/16，而是应该使用(129-128)/16，这是计算在16对齐数规则下的字节数，随后要再加上按照8字节对齐的自由链表的下标号(这个号是固定的: 16)。
 
 **• 代码部分**
 
@@ -192,11 +189,110 @@ public:
 
 ## TLS无锁访问
 
+&emsp;我们在设计ThreadCache时，谈到了每个线程都有自己独属的ThreadCache，因此在访问ThreadCache时不需要加锁访问。那么这个独属的ThreadCache该怎么做到呢?每个线程都要去new ThreadCache对象，然而在new对象时，就可能出现多个线程同时去new，此时如果不加锁就会出问题！
+
+&emsp;这里我们需要借助到TLS(Thread Local Storage，线程本地存储)，是一种变量的存储方法，这个变量在它所在的线程是全局可访问的，但是其它线程是不能访问的，这就保持了**数据的线程独立性**。这样就避免了锁的使用。TLS在Linux下和Windows下面的接口不同，具体参考下面的：
+
+[Linux TLS ](https://zhuanlan.zhihu.com/p/142418922)、[Windows TLS](https://www.cnblogs.com/liu6666/p/12729014.html)
+
+---
+
+&emsp;这里定义一个TLS对象的指针，每个线程通过该指针去new ThreadCache对象，然后向ThreadCache申请空间。
+
+```cpp
+// TLS thread local storage
+static _declspec(thread) ThreadCache* pTLSThreadCache = nullptr;
+```
 
 
 
+**问题**：为什么需要创建下面2个函数?/为什么还要封装一层?
+&emsp;因为每个线程都有自己的TLS，我们不可能让用户自己去调用TLS然后才能调到Allocate，而是应该直接给他们提供接口。让他们使用接口就行了
 
+```cpp
+//封装一层
+static void* ConcurrentAllocate(size_t size)	//对于tcmalloc中，这里的的名称就是tcmalloc了
+{
+	if (pTLSThreadCache == nullptr)
+	{
+		pTLSThreadCache = new ThreadCache;
+	}
+	cout << std::this_thread::get_id() << ":" << pTLSThreadCache << endl;
+	return pTLSThreadCache->Allocate(size);
+}
 
+//封装一层
+static void ConcurrentDeallocate(void* ptr, size_t size)
+{
+	assert(pTLSThreadCache);
+	pTLSThreadCache->Deallocate(ptr, size);
+}
+```
+
+&emsp;
+
+&emsp;
+
+## ThreadCache整体代码
+
+```cpp
+/***		ThreadCache.h		***/
+#pragma once
+#include "Common.h"
+
+class ThreadCache
+{
+public:
+	//申请和释放内存对象
+	void* Allocate(size_t size);
+	void Deallocate(void* ptr, size_t size);
+
+	void* FetchFromCentralCache(size_t Index, size_t alignNum);
+
+private:
+	FreeList _freelists[NFREELISTS];
+};
+
+// TLS thread local storage
+static _declspec(thread) ThreadCache* pTLSThreadCache = nullptr;
+```
+
+```cpp
+/***		ThreadCache.cpp		***/
+#include "ThreadCache.h"
+
+void* ThreadCache::FetchFromCentralCache(size_t Index, size_t alignNum)
+{
+	//...
+	return nullptr;
+}
+
+//向ThreadCache申请空间
+void* ThreadCache::Allocate(size_t size)
+{
+	assert(size <= MAX_BYTES);
+	size_t alignNum = SizeClass::RoundUp(size);	//对齐数(对齐到每块对象的大小为alignNum的自由链表上)
+	size_t index = SizeClass::Index(size);//具体是第几号自由链表(数组下标)
+
+	if (!_freelists[index].Empty())
+	{
+		return _freelists[index].Pop();	//从freelist上对应的桶中分配一块空间
+	}
+	else
+	{
+		return FetchFromCentralCache(index, alignNum);	//从CentralCache上申请一块空间并返回
+	}
+}
+
+void ThreadCache::Deallocate(void* ptr, size_t size)
+{
+	assert(ptr);
+	assert(size <= MAX_BYTES);
+
+	int index = SizeClass::Index(size);	//计算出应该插到哪个自由链表上
+	_freelists[index].Push(ptr);	//将ptr这块空间头插到对应的自由链表上
+}
+```
 
 
 
