Optimize some details:1.Add alloc > 256KB 2.Replace new with ObjectPool 3.level out size in Free by adding a field _ObjectSize in Span

--- a/项目思路与细节.md
+++ b/项目思路与细节.md
@@ -306,3 +306,81 @@ void ThreadCache::Deallocate(void* ptr, size_t size)
 
 
 
+
+
+
+
+
+
+
+
+# 项目优化
+
+## 1. 申请对象大小大于256KB
+
+申请对象大小的情况分类:
+
+1. ``size <= 256KB``	--> 三层缓存, 直接向ThreadCache申请
+2. ``size > 256KB`` && ``size <= ((NAPGES - 1) >> PAGE_SHIFT)`` --> 直接向PageCache申请
+3. ``size > ((NPAGES - 1) >> PAGE_SHIFT)`` --> 直接向堆申请
+
+
+
+
+
+&emsp;
+
+## 2. 使用定长内存池取代new
+
+
+
+
+
+
+
+
+
+
+
+&emsp;
+
+## 3. Free对象时不传大小
+
+&emsp;正常的free函数我们只传了一个ptr指针，并没有要求我们传递对象的大小。那么如何通过ptr指针关联到对象的大小呢?
+
+**问题**：我们需要对象的大小去做什么? 
+&emsp;通过对象的大小计算出对齐数alignNum,随后通过映射规则就能得到这个对象在删除时应该插入到哪个桶的freelist当中。
+
+既然不传大小, 那么就代表我们需要根据我们所传的ptr指针来得到什么对象的大小!
+
+ptr指针 --> PAGE_ID --> Span*
+
+解决方法：
+
+1. 我们可以建立一个PAGE_ID与对象大小Size的映射关系表
+2. 我们可以在Span结构体当中增添一个新的成员变量``ObjectSize``已记录当前的Span分配对象时对象的大小。
+
+
+
+
+
+**缺漏点**:
+
+1. ThreahCache.cpp中的ListTooLong的PopRange中, freelist.MaxSize()作为多余的参数传了过去
+
+2. 加锁的问题: MapPAGEIDToSpan()函数访问时的加锁问题。CentralCache中的ReleaseListToSpans中访问MapPAGEIDToSpan, 最好也加上PageCache的锁。(因为对_idSpanMap的操作都是在PageCache的锁下面操作的, 因此要加锁也必须加同一把)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
