Summary and MindMap

--- a/项目思路与细节.md
+++ b/项目思路与细节.md
@@ -2,7 +2,17 @@
 
 # 项目整体框架
 
+<img src="https://gitee.com/wuqiongjin/noteimage/raw/master/Notebook_Image/202203022019666.png" alt="image-20220302201949544" style="zoom:80%;" />
 
+&emsp;每个线程都有**自己专属的ThreadCache**(TLS无锁访问)，每次只需要向ThreadCache申请内存即可。ThreadCache的结构是一个哈希桶，每一个桶的位置存放的都是一个自由链表，不同桶中自由链表中所挂的对象大小不同。这里的对象都是定长对象，也就是说当线程向ThreadCache申请内存时，会传入一个对象的大小，ThreadCache通过传入的对象大小计算出桶的位置，随后将对应桶的下面的自由链表中的一块内存Pop出来给线程。
+
+&emsp;如果ThreadCache对应桶中的自由链表没有小块对象了，那么ThreadCache会向CentralCache索要小块对象。CentralCache的结构也是一个哈希桶，不过每个桶下面挂的是一个SpanList，SpanList是由Span结构体组成的链表。每个Span当中存有描述这个Span的信息：当前的Span所管理的空间所对应的页号与页数、Span分出去的小块对象的数量、Span下面还挂着一个freelist以用来存储切分好的小块对象。那么ThreadCache在向CentralCache索要小块对象时，应该向哪个桶中的SpanList索要呢? 这里的桶的位置的也是依靠小块对象的大小确定的，也就是说CentralCache中桶下标的映射规则与ThreadCache是一致的，都是通过对象的大小来确定的。在得到桶的位置后，去遍历SpanList找寻非空的Span(非空指freelist不为空，因为freelist下面挂着小块对象，如果freelist中是空的，那么说明当前的Span已经将所有的小块对象都分出去了。一个没分出去任何小对象的Span下面的freelist一定挂着很多小对象(因为申请新的Span后就会对Span进行切分，随后将其挂载到Span下面的freelist当中))。找到非空的Span后，从非空的Span下面的freelist当中PopRange出一段小对象连接成的空间(虽然每次线程只要一个对象，但是CentralCache往往会给ThreadCache不止一个，这个数量是由MaxSize和batchNum共同决定的)。将这段小对象连接成的内存头插到ThreadCache对应桶中的freelist下(注意这段小对象链表的第一个小对象直接返回即可，因为线程需要马上使用，而剩下的要头插到ThreadCache的freelist下)。
+
+&emsp;如果CentralCache对应桶下没有非空的Span了，那么它会向PageCache索要Span。PageCache的结构也是一个哈希桶，不过和前面两层不同，哈希桶的下标的映射规则是依靠页数来映射的。前面说过Span当中存有页数这个信息，也就是说页数是多少就代表桶的下标是多少！我们将桶的大小设位129，桶的下标从0-128，而0号桶没有意义就不使用了。每个桶的下面挂的也是一个SpanList，而这里的SpanList的Span是还没有切分的哦！切分Span的操作是在CentralCache中的GetOneSpan函数中做的！我们从页数对应的桶中头删一个Span，如果SpanList是空的，那么我们继续搜索后面的桶，如果再后面的桶中找到了非空的SpanList，那么就切分处一块Span。如果后面的桶也全是空的，此时需要向堆索要一块大小为128页的Span并插入到最后一块桶。然后递归调用自己，再次查询后面非空的桶，最终一定会将128页的这个Span进行切分的。(这里使用递归的原因是更好的复用了代码，虽然效率稍微下降了一丢丢，但是这一丢丢不影响)。在拿到Span后，返还给CentralCache，CentralCache对Span进行切分，然后返回给ThreadCache一批小对象。最终刚完成了内存申请的过程。
+
+----
+
+&emsp;我刚才所谈的只是内存申请的过程，并且像哪一层需要加锁，加的锁是什么锁，都没有细说。详细的细节看后面。
 
 内碎片：
 
@@ -13,6 +23,8 @@
 
 
 # ThreadCache
+
+## 框架结构与成员变量
 
 &emsp;thread cache是哈希桶的结构，每个桶实际上是一个按桶位置映射大小的内存块对象的自由链表。每个线程都会有一个自己的thread cache对象，这样每个线程在这里获取对象和释放对象时都是无锁的。
 
@@ -167,21 +179,48 @@ public:
 }
 ```
 
-
-
 &emsp;
 
 &emsp;
 
 ## 释放内存
 
+**问题：什么情况下开始向上层释放内存?**
 
+tcmalloc中给出了2个情况:
 
+1. 判断当前的``freelist``的长度大于等于一次批量申请的内存时就开始释放freelist当前长度大小的list还给centralcache
+2. 当ThreadCache整体的内存占用大小如果超过一定大小(如2M)就进行回收与释放
 
+我们这里只考虑第一点，即：``_freelists[index].Size() >= _freelists[index].MaxSize()``
 
+&emsp;我们释放的ptr重新放回``_freelists[index]``中, 以方便后续继续使用。当``_freelists[index]``的长度大于等于一次批量申请的小块内存的数量时*(MaxSize)*，我们就对当前所在桶的自由链表进行释放，将长度位MaxSize的链表归还给CentralCache对应的Span当中。
 
+```cpp
+void ThreadCache::Deallocate(void* ptr, size_t size)
+{
+	assert(ptr);
+	assert(size <= MAX_BYTES);
+	
+	size_t index = SizeClass::Index(size);	//计算出应该插到哪个自由链表上
+	_freelists[index].Push(ptr);	//将ptr这块空间头插到对应的自由链表上
 
+	//当自由链表下面挂着的小块内存的数量 >= 一次批量申请的小块内存的数量时,
+	//我们将Size()大小的小块内存全部返回给CentralCache的Span上
+	if (_freelists[index].Size() >= _freelists[index].MaxSize())
+	{
+		ListTooLong(_freelists[index], size);
+	}
+}
 
+void ThreadCache::ListTooLong(FreeList& freelist, size_t size)
+{
+	void* start = nullptr;
+	void* end = nullptr;
+	freelist.PopRange(start, end, freelist.MaxSize());	//让freelist Pop出一段区间(这里的第三个参数没什么意义, 可以考虑删除)
+	CentralCache::GetInstance()->ReleaseListToSpans(start, size);
+}
+```
 
 &emsp;
 
@@ -233,66 +272,19 @@ static void ConcurrentDeallocate(void* ptr, size_t size)
 
 &emsp;
 
-## ThreadCache整体代码
+# CentralCache
 
-```cpp
-/***		ThreadCache.h		***/
-#pragma once
-#include "Common.h"
+## 框架结构与成员变量
 
-class ThreadCache
-{
-public:
-	//申请和释放内存对象
-	void* Allocate(size_t size);
-	void Deallocate(void* ptr, size_t size);
 
-	void* FetchFromCentralCache(size_t Index, size_t alignNum);
 
-private:
-	FreeList _freelists[NFREELISTS];
-};
 
-// TLS thread local storage
-static _declspec(thread) ThreadCache* pTLSThreadCache = nullptr;
-```
 
-```cpp
-/***		ThreadCache.cpp		***/
-#include "ThreadCache.h"
 
-void* ThreadCache::FetchFromCentralCache(size_t Index, size_t alignNum)
-{
-	//...
-	return nullptr;
-}
 
-//向ThreadCache申请空间
-void* ThreadCache::Allocate(size_t size)
-{
-	assert(size <= MAX_BYTES);
-	size_t alignNum = SizeClass::RoundUp(size);	//对齐数(对齐到每块对象的大小为alignNum的自由链表上)
-	size_t index = SizeClass::Index(size);//具体是第几号自由链表(数组下标)
+## 申请内存
 
-	if (!_freelists[index].Empty())
-	{
-		return _freelists[index].Pop();	//从freelist上对应的桶中分配一块空间
-	}
-	else
-	{
-		return FetchFromCentralCache(index, alignNum);	//从CentralCache上申请一块空间并返回
-	}
-}
 
-void ThreadCache::Deallocate(void* ptr, size_t size)
-{
-	assert(ptr);
-	assert(size <= MAX_BYTES);
-
-	int index = SizeClass::Index(size);	//计算出应该插到哪个自由链表上
-	_freelists[index].Push(ptr);	//将ptr这块空间头插到对应的自由链表上
-}
-```
 
 
 
@@ -375,6 +367,10 @@ ptr指针 --> PAGE_ID --> Span*
 
 
 
+
+# 性能优化
+
+使用基数树替代unordered_map。
 
 
 
