细节完善以及xmind补充

--- a/项目思路与细节.md
+++ b/项目思路与细节.md
@@ -1,5 +1,19 @@
 [toc]
 
+# 项目介绍
+
+&emsp;该项目实现的是一个高并发内存池，它是以Google的开源项目tcmalloc为原型，然后将核心框架进行了简化，模拟实现了一个简化版的高并发内存池。(我做这个项目的目的是在于学习tcmalloc的精华)
+
+## 池化技术
+
+&emsp;池化技术就是程序事先向OS申请过量的资源，然后自己管理。这样的好处在于每次申请内存的时候就会直接去自己管理的池当中获取资源了，节省了内核态与用户态转化的时间，从而提高了程序的效率。
+
+&emsp;在计算机当中，有很多地方都使用到了池化技术。比如: 内存池、线程池、连接池、对象池。以线程池为例子，它的主要思想是先启动若干线程，让它们进入休眠状态。当接收到客户端的请求时，再去唤醒线程池当中的线程，让线程去帮忙处理请求。当请求处理完毕后，该线程又会重新进入休眠状态。
+
+## 内存池
+
+&emsp;内存池就是指程序预先向OS的堆区申请一块足够大的空间，然后进行管理。一旦程序中有需要申请内存的时候，就不需要向OS申请了，而是直接从内存池中获取。同理，当程序释放内存时，也不是把内存返回给OS，而是返回给内存池。当程序退出(特定时间)时，内存池才会将管理的内存全都真正的释放掉。
+
 # 项目整体框架
 
 <img src="https://gitee.com/wuqiongjin/noteimage/raw/master/Notebook_Image/202203022019666.png" alt="image-20220302201949544" style="zoom:80%;" />
@@ -30,11 +44,7 @@
 
 
 
-
-
-## 申请内存
-
-### 向上对齐
+## 向上对齐
 
 &emsp;每个ThreadCache管理256KB的空间，为了更合理的管理，我们不能以1字节为单位进行对齐，这样的话一个ThreadCache就需要建立25w个自由链表了(**每个自由链表管理的对象大小都不同**)。因此我们采用更大字节数进行对齐，比如我们按照8字节来对齐，这样的话就需要建立256\*1024/8个自由链表了，实际上数目也有3w多，并且这种只按照8字节进行对齐的话，我们会发现划分空间时，内碎片的占比浮动很大。比如在字节数小的时候，假设我们索要2字节的空间，那么内碎片就占了(8-2)/8 = 75%；而当字节数大的时候，假设索要801字节的空间，那么内碎片占了(808-801)/808 = 0.8%左右。
 
@@ -123,7 +133,7 @@ public:
 
 &emsp;
 
-### 自由链表的下标
+## 自由链表的下标
 
 &emsp;我们知道申请空间的字节数，现在要根据这个字节数算出应该去找哪个自由链表。然而由于不同的字节数范围，它们所采取的对齐数的值是不同的，因此我们要对不同范围的字节数进行判断，然后再计算它是哪个自由链表的。
 
@@ -182,6 +192,16 @@ public:
 &emsp;
 
 &emsp;
+
+## 申请内存
+
+
+
+
+
+
+
+
 
 ## 释放内存
 
@@ -275,6 +295,91 @@ static void ConcurrentDeallocate(void* ptr, size_t size)
 # CentralCache
 
 ## 框架结构与成员变量
+
+&emsp;CentralCache的结构也是个哈希桶，不过每个桶处挂的是一个SpanList，SpanList类似于链表，其中的每个节点都是一个Span结构体。
+
+**• Span**
+
+```cpp
+//一个Span是用来管理多个连续页的大块内存的
+struct Span	//这个结构就类似于ListNode，因为它是构成SpanList的单个结点
+{
+	PAGE_ID _pageID = 0;//大块内存起始页的页号(将一个进程的地址空间以页为单位划分，32下页的数量是2^32/2^13;64位下页的数量是2^64/2^13;假设一页是8K)
+	size_t _n = 0;		//页的数量
+	size_t _useCount = 0;//将切好的小块内存分给threadcache，useCount记录分出去了多少个小块内存
+	bool _isUsed = false;
+	size_t _ObjectSize = 0;	//存储当前的Span所进行服务的对象的大小
+	Span* _next = nullptr;
+	Span* _prev = nullptr;
+	void* _freelist = nullptr;//大块内存切成小块并连接起来，这样当threadcache要的时候直接给它小块的，回收的时候也方便管理
+};
+```
+
+&emsp;
+
+**• SpanList**
+
+```cpp
+//带头的双向循环链表(将每个桶的位置处的多个Span连接起来)
+class SpanList
+{
+public:
+	SpanList()
+	{
+		_head = new Span;
+		_head->_next = _head;
+		_head->_prev = _head;
+	}
+
+	void Insert(Span* pos, Span* newSpan)
+	{
+		assert(pos && newSpan);
+		Span* prev = pos->_prev;
+
+		newSpan->_next = pos;
+		newSpan->_prev = prev;
+		pos->_prev = newSpan;
+		prev->_next = newSpan;
+	}
+
+	void PushFront(Span* span)
+	{
+		Insert(Begin(), span);
+	}
+
+	Span* PopFront()
+	{
+		assert(_head);
+		Span* span = _head->_next;
+		Erase(span);
+		return span;
+	}
+
+	void Erase(Span* pos)
+	{
+		assert(pos);
+		assert(pos != _head);
+		Span* prev = pos->_prev;
+		Span* next = pos->_next;
+
+		prev->_next = next;
+		next->_prev = prev;
+	}
+
+	//为什么只提供Begin()和End()?
+	//因为我们只需要获取到Begin()和End()，然后定义一个Span* 指针就可以完成SpanList的遍历了(不需要搞什么迭代器)
+	Span* Begin()	{	return _head->_next;	}
+	Span* End()	{	return _head;	}
+	bool Empty()	{	return _head->_next == _head;	}	//双线循环链表
+	void Lock() { _mtx.lock(); }
+	void UnLock() { _mtx.unlock(); }
+private:
+	Span* _head = nullptr;
+	std::mutex _mtx;	//桶锁: 进到桶里的时候才会加锁
+};
+```
+
+
 
 
 
@@ -372,11 +477,42 @@ ptr指针 --> PAGE_ID --> Span*
 
 使用基数树替代unordered_map。
 
+为什么基数树的效率高?
+
+1. 基数树允许多个线程同时访问_idSpanMap
+2. 基数树
 
 
 
 
 
+
+
+
+
+# 扩展了解
+
+## malloc与free的底层原理
+
+[一文了解，Linux内存管理，malloc、free 实现原理 ](https://zhuanlan.zhihu.com/p/384022573)
+
+&emsp;malloc底层实际上也有管理着一个内存池，malloc向堆区申请一块较大的内存空间后，当有线程申请空间时，malloc就会给它分配空间。
+
+&emsp;malloc管理内存块时，实际上返回的是指向有效载荷的指针。每块内存块中的首部是相同的，都有一个next的指针以用来连接下一块内存块，以及used参数显示当前内存块是否空闲。
+
+<img src="https://gitee.com/wuqiongjin/noteimage/raw/master/Notebook_Image/202203031126563.png" alt="image-20220303112646446" style="zoom:80%;" />
+
+
+
+下面是malloc的内存管理方式：
+
+![image-20220303113030456](https://gitee.com/wuqiongjin/noteimage/raw/master/Notebook_Image/202203031130522.png)
+
+
+
+malloc会遍历整个链表，找到空闲的内存块，随后
+
+free在释放内存块时也会检查相邻的内存块是否能进行合并，如果可以合并就会合并成为更大的内存块。
 
 
 
